fixed gallery contrast issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,7 @@ body {
     padding-top: 0;
 }
 
-.hero-container--1 p {
+.hero-container--1 h1 {
     position: absolute;
     background-color: rgba(255, 255, 255, 0.705);
     left: 50%;
@@ -168,6 +168,7 @@ body {
 .description {
     padding: 15px;
     text-align: center;
+    color: #000;
 }
 
 /* -------Blogs Section------ */
